Fix invisible clickable menu links error

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -290,7 +290,7 @@ body {
 }
 .sub-nav__content {
     position: fixed;
-    top: 50%;
+    top: 0%;
     -webkit-transform: translate(0%, -50%);
     transform: translate(0%, -50%);
     width: 100%;
@@ -335,7 +335,9 @@ body {
 .sub-nav__list-item:hover:before {
     width: 100%;
 }
-
+body.sub-nav-active .sub-nav__content{
+        top: 50%;
+}
 body.sub-nav-active .menu-icon__line {
     background-color: #000;
     -webkit-transform: translateX(0px) rotate(-45deg);
